--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
     <body>
+        <button class="btn btn-outline-success btn-lg">click me</button>
+        <div class="d-grid gap-2 col-10 mx-auto" >
+            <button class="btn btn-outline-primary ">click me</button>
+        </div>
+        <button class="btn btn-outline-danger btn-sm"  style="--bs-btn-padding-y: .40rem; --bs-btn-padding-x: .4rem; --bs-btn-font-size: .80rem;">click me</button>
+        <a href="./index2.html">go to next page</a>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 </html>
